Kubernetes_app/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: dev-che
   labels:
      app: backend
   namespace: microservice
spec:
  replicas: 2
  matchLabels:
    app: backend
  template:
    metadata:
      matchLabels:
        app: backend
    spec:
        containers:
          - image: scinet0786/dev-chebackend:latest
            name: dev-che-backend
            ports:
              containerPort: 8081
