Kubernetes_app/frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservice
---


apiVersion: apps/v1
kind: Deployment
metadata:
   name: dev-che
   labels:
      app: frontend
   namespace: microservice
spec:
  replicas: 2
  matchLabels:
    app: frontend
  template:
    metadata:
      matchLabels:
        app: frontend
    spec:
        containers:
          - image: scinet0786/dev-chefrontend:latest
            name: dev-che-frontend
            ports:
              containerPort: 8081
